[package]
name = "treedem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fltk_desk"
path = "src/lib.rs"

[dependencies]
fltk_desk={path=".."}
fltk = { version = "1.4.24", features = ["fltk-bundled"] }
